<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".view_entry">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Personalized Data"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/purple_200"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_space_top" />

    <TextView
        android:id="@+id/calories_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/calories_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/net_carbs_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_space" />

    <TextView
        android:id="@+id/cal_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@+id/calories_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/net_carbs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/carbs"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/fats_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/net_carbs_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/net_carbs_title" />

    <TextView
        android:id="@+id/fats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fats"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/protein_title"/>

    <TextView
        android:id="@+id/fats_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fats_title" />]

    <TextView
        android:id="@+id/water_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottles_of_water"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protein_title" />

    <TextView
        android:id="@+id/water_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/water_title" />

    <TextView
        android:id="@+id/exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_title" />

    <TextView
        android:id="@+id/exercise_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exercise_title" />

    <TextView
        android:id="@+id/protein_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/fats_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/protein_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/protein_title" />

    <View
        android:id="@+id/horizontal_space_top"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/horizontal_space"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/purple_200"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/horizontal_space2"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_title"/>

    <View
        android:id="@+id/vertical_space"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_space2"/>

    <View
        android:id="@+id/vertical_space3"
        android:layout_width="8dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_space"
        app:layout_constraintBottom_toTopOf="@id/horizontal_space2"/>

    <View
        android:id="@+id/vertical_space2"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_space2"/>

    <TextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_title2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_title" />

    <TextView
        android:id="@+id/weight_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weight_title" />

</androidx.constraintlayout.widget.ConstraintLayout>